--- a/views/exercise.html
+++ b/views/exercise.html
@@ -29,16 +29,16 @@
           <form class="form" id="postExercise" action="/exercise/add" method="post">
             <h3 class="input-details">Add exercises</h3>
             <p class="input-details"><code>POST exercise/add</code></p>
-            <input id="uid" type="text" name="userId" placeholder="userId*">
-            <input id="desc" type="text" name="description" placeholder="description*">
-            <input id="dur" type="text" name="duration" placeholder="duration* (mins.)">
+            <input id="uid" type="text" name="userId" placeholder="userId (required)">
+            <input id="desc" type="text" name="description" placeholder="description (required)">
+            <input id="dur" type="text" name="duration" placeholder="duration in mins. (required)">
             <input id="dat" type="text" name="date" placeholder="date (yyyy-mm-dd)">
             <input type="submit" value="Submit">
           </form>
           <form class="form" id="getExercise" action="/exercise/log" method="get">
             <h3 class="input-details">Get Exercise Log</h3>
             <p class="input-details"><code>GET exercise/log</code></p>
-            <input id="uid2" type="text" name="userId" placeholder="userId*">
+            <input id="uid2" type="text" name="userId" placeholder="userId (required)">
             <input id="from" type="text" name="from" placeholder="from (yyyy-mm-dd)">
             <input id="to" type="text" name="to" placeholder="to (yyyy-mm-dd)">
             <input id="limit" type="text" name="limit" placeholder="number">
