--- a/views/microservices.html
+++ b/views/microservices.html
@@ -32,109 +32,109 @@
   </head>
 
   <body>
-    <div class="app">
-      <a id="main-page-link" href="" onclick="goBack()"
-        ><p>Back to Main Page</p></a
-      >
-      <h2>Various Microservices</h2>
-      <div id="microservices-container">
-        <div id="analyser-tile" class="microservice-tile">
-          <h3>File Analyser:</h3>
-          <p>Please Upload a File ...</p>
-          <div class="view">
-            <h4 id="output"></h4>
-            <form
-              id="postFile"
-              enctype="multipart/form-data"
-              method="POST"
-              action="/fileanalyse/upload"
-            >
-              <input id="inputfield" type="file" name="upfile" />
-              <input id="button" type="submit" value="Upload" />
-            </form>
-          </div>
-        </div>
-        <div id="shorturl-tile" class="microservice-tile">
-          <div class="container">
-            <a id="main-page-link" href="" onclick="goBack()"
-              ><p>Back to Main Page</p></a
-            >
-            <h2>URL Shortener</h2>
-            <form id="postUrl" action="api/shorturl/new" method="POST">
-              <label for="url-input">URL to be shortened</label>
-              <input
-                id="url-input"
-                type="text"
-                name="inputURL"
-                value="https://www.freecodecamp.org"
-              />
-              <input type="submit" value="Receive short URL" target="_blank" />
-            </form>
-            <h3>Example Usage:</h3>
-            <a
-              href="https://inc0mple-portfolio.herokuapp.com/api/shorturl/2LiUHkrsC"
-            >
-              [this_project_url]/api/shorturl/2LiUHkrsC
-            </a>
-            <h3>Try short URL here:</h3>
-            <form
-              id="redirect-form"
-              action="api/shorturl"
-              method="GET"
-              target="_blank"
-            >
-              <label for="user-input"
-                >https://inc0mple-portfolio.herokuapp.com/api/shorturl/</label
+    <div id="app">
+      <h1 id="mainTitle" class="title">Various Microservices</h1>
+      <div id="ioContainer">
+        <div id="microservices-container">
+          <div id="analyser-tile" class="microservice-tile">
+            <h3>Basic File Analyser:</h3>
+            <p>Please Upload a File ...</p>
+            <div class="view">
+              <h4 id="output"></h4>
+              <form
+                id="postFile"
+                enctype="multipart/form-data"
+                method="POST"
+                action="/fileanalyse/upload"
               >
-              <input
-                id="user-input"
-                type="text"
-                name="userURL"
-                value="2LiUHkrsC"
-              />
-              <input type="submit" onclick="appendURL()" value="Go to URL" />
-              <a id="output-link" href="" target="_blank"
-                ><p id="output-val"></p
-              ></a>
-            </form>
+                <input id="inputfield" type="file" name="upfile" />
+                <input id="button" type="submit" value="Upload" />
+              </form>
+            </div>
           </div>
-        </div>
-        <div id="translator-tile" class="microservice-tile">
-          <div class="container">
-            <div class="form-container">
-              <textarea rows="10" cols="60" id="text-input"></textarea>
-              <br />
-              <select id="locale-select">
-                <option value="american-to-british">American to British</option>
-                <option value="british-to-american">British to American</option>
-              </select>
-              <input type="button" value="Translate" id="translate-btn" />
-              <input type="button" value="Clear" id="clear-btn" />
+          <div id="shorturl-tile" class="microservice-tile">
+            <div class="container">
+              <h3 class="title">URL Redirect-link creator</h3>
+              <form id="postUrl" action="api/shorturl/new" method="POST">
+                <label for="url-input"></label>
+                <input
+                  id="url-input"
+                  type="text"
+                  name="inputURL"
+                  value="https://www.freecodecamp.org"
+                />
+                <input type="submit" value="Receive new URL" target="_blank" />
+              </form>
+              <h3 class="title">Enter new URL suffix here:</h3>
+              <form
+                id="redirect-form"
+                action="api/shorturl"
+                method="GET"
+                target="_blank"
+              >
+                <label for="user-input"
+                  >https://inc0mple-portfolio.herokuapp.com/api/shorturl/</label
+                >
+                <input
+                  id="user-input"
+                  type="text"
+                  name="userURL"
+                  value="2LiUHkrsC"
+                />
+                <input type="submit" onclick="appendURL()" value="Go to URL" />
+                <a id="output-link" href="" target="_blank"
+                  ><p id="output-val"></p
+                ></a>
+              </form>
+            </div>
+          </div>
+          <div id="translator-tile" class="microservice-tile">
+            <h3 class="title">American-British Translator</h3>
+            <div class="container">
+              <div class="form-container">
+                <textarea rows="10" cols="40" id="text-input"></textarea>
+                <br />
+                <select id="locale-select">
+                  <option value="american-to-british">American to British</option>
+                  <option value="british-to-american">British to American</option>
+                </select>
+                <input type="button" value="Translate" id="translate-btn" />
+              </div>
+            </div>
+          </div>
+          <div id="converter-tile" class="microservice-tile">
+            <div id="testui">
+              <h3>Metric-Imperial Converter</h3>
+              <form id="convertForm" class="border">
+                <input
+                  type="text"
+                  id="convertField"
+                  name="input"
+                  placeholder="3.1mi"
+                />
+                <input id="convert" type="submit" value="Convert" />
+                <p>Units accepted: gal, L, mi, km, lbs, kg.</p>
+                <p>Fractional and decimal inputs accepted.</p>
+              </form>
             </div>
           </div>
         </div>
-        <div id="converter-tile" class="microservice-tile">
-          <div id="testui" style="margin-left: 5%">
-            <h2 style="text-align: left">Front-End:</h2>
-            <form id="convertForm" class="border">
-              <input
-                type="text"
-                id="convertField"
-                name="input"
-                placeholder="3.1mi"
-                style="width: 200px"
-              />
-              <input id="convert" type="submit" value="Convert!" />
-            </form>
+        <div id="outputMsgBox">
+          <h3 class="title">Messages</h3>
+          <div id="outputMgsDiv">
+            <div id="outputMsg">Output appears here</div>
+            
           </div>
-          <hr style="margin: 50px; margin-top: 200px" />
+          <input type="button" value="Clear" id="clear-btn" />
         </div>
+        
       </div>
-      <div id="outputMsgBox">
-        <div id="outputMsg1">Output1 appears here</div>
-        <div id="outputMsg2">Output2 appears here</div>
-      </div>
+      <a id="main-page-link" href="" onclick="goBack()"
+        ><p id="main-page-text" >Back to Main Page</p></a
+      >
     </div>
+    
+    
     <div class="footer"></div>
   </body>
   <script>
@@ -142,8 +142,7 @@
   let translateButton = document.getElementById('translate-btn');
   let clearButton = document.getElementById('clear-btn');
   let locale = document.getElementById("locale-select");
-  let outputDiv = document.getElementById("outputMsg1");
-  let errorDiv = document.getElementById("outputMsg2");
+  let outputDiv = document.getElementById("outputMsg");
 
   const americanOnly = {
     "acclimate": "acclimatise",
@@ -2304,7 +2303,7 @@
 });
 
 translateButton.addEventListener('click', () => {
-  if (!textBox.value) return (errorDiv.innerHTML = "<span color='red'>Error: No text to translate.</span>");
+  if (!textBox.value) return (outputDiv.innerHTML = "<span color='red'>No text to translate.</span>");
   let initialInput = textBox.value
   let inputString = textBox.value 
   if (locale.value == "american-to-british") {
@@ -2352,10 +2351,9 @@ translateButton.addEventListener('click', () => {
   }
 
   if (initialInput == inputString) {
-    inputString = "Everything looks good to me!"
+    inputString = "No translations necessary!"
   }
   outputDiv.innerHTML = inputString;
-  errorDiv.innerHTML = "";
 
 });
 
@@ -2376,15 +2374,14 @@ translateButton.addEventListener('click', () => {
           type: "get",
           data: $("#convertForm").serialize(),
           success: function (data) {
-            $("#outputMsg1").text(data.string || data);
-            $("#outputMsg2").text(JSON.stringify(data));
+            $("#outputMsg").text(data.string || data);
           },
         });
       });
     });
   </script>
   <script>
-    let outputMsg1 = document.getElementById('outputMsg1')
+    let outputMsg = document.getElementById('outputMsg')
     document.getElementById('postFile').addEventListener('submit', postFile)
     document.getElementById('postUrl').addEventListener('submit', postUrl)
 
@@ -2395,7 +2392,7 @@ translateButton.addEventListener('click', () => {
           let form = document.getElementById("postFile")
           let formData = new FormData(form)
           //let file = document.getElementById('inputfield').files[0];
-          console.log(file)
+          //console.log(file)
           //console.log(form)
           fetch("/fileanalyse/upload", {
             method:'POST',
@@ -2403,7 +2400,7 @@ translateButton.addEventListener('click', () => {
           })
           .then((res) => res.json())
           .then((data) => {
-            outputMsg1.innerHTML = typeof data == "string" ? data : JSON.stringify(data)//stringify required or else [object object] returned
+            outputMsg.innerHTML = typeof data == "string" ? data : JSON.stringify(data)//stringify required or else [object object] returned
             console.log(data)
           })
         }
@@ -2421,7 +2418,7 @@ translateButton.addEventListener('click', () => {
           })
           .then((res) => res.json())
           .then((data) => {
-            outputMsg1.innerHTML = typeof data == "string" ? data : JSON.stringify(data)//stringify required or else [object object] returned
+            outputMsg.innerHTML = typeof data == "string" ? data : JSON.stringify(data)//stringify required or else [object object] returned
             console.log(data)
           })
         }
