--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -95,7 +95,7 @@
   <p class="projtext">Back-end Projects</p>
   <div id="back-end" class="projects-area">
     <div class="project-tile" id="b1">
-      <a class="project-link" href="/microservices" target="_blank"><img class="project-img" src=""></img></a>
+      <a class="project-link" href="/microservices" target="_blank"><img class="project-img" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/microservicesBackground.png"></img></a>
       <a href="/microservices" target="_blank"><button class="project-btn">Various Microservices</button></a>
     </div>
     <div class="project-tile" id="b2">
