--- a/public/keypoints.css
+++ b/public/keypoints.css
@@ -3,6 +3,7 @@
     background-color: rgb(51, 49, 83);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin:1rem;
+    margin-top:0px;
     border-radius: 2px;
     font-size: large;
     
@@ -41,27 +42,30 @@ input{
     color: white;
     padding: 6px 20px;
     margin: 10px 0;
-    border: none;
     border-radius: 4px;
     cursor: pointer;
+    border: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
-input[type=submit] {
+#uploadImage {
     width: 90%;
     background-color: dodgerblue;
     color: white;
     padding: 6px 20px;
     margin: 10px 0;
-    border: none;
     border-radius: 4px;
     cursor: pointer;
+    border: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
 #clearImage, #clearText {
     width: 90%;
     background-color: firebrick;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color: white;
     padding: 6px 20px;
     margin: 10px 0;
@@ -75,8 +79,8 @@ input[type=submit] {
 }
 
 
-#processImage:hover {
-    background-color: rgb(22, 113, 204);
+#uploadImage:hover {
+    background-color: rgb(19, 102, 185);
 }
 
 #processImage:hover {
@@ -93,8 +97,26 @@ input[type=submit] {
     transform: translateY(2px);
 }
 
+#loader {
+    position: absolute;
+    padding:30px;
+    z-index: 1;
+    border: 10px solid #f3f3f3; /* Light grey */
+    border-top: 10px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+    display: none;
+  }
 
-input[type=submit]:active {
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+
+#uploadImage:active {
     background-color: rgb(2, 65, 128);
     transform: translateY(2px);
 }
@@ -105,8 +127,6 @@ input[type=submit]:active {
     background-color: rgb(71, 0, 0);
     transform: translateY(2px);
 }
-
-
 
 
 #container {
@@ -199,18 +219,23 @@ form{
 
 #outputImg{
     margin:2rem;
-    max-width: 80%;
+    max-width: 100%;
     max-height: 60vh;
 }
 
 footer{
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin:1rem;
     border-radius: 2px;
     min-width: 70rem;
+}
+
+#main-page-link{
+    text-align: center;
 }
 
 @media only screen and (max-width: 800px) {
@@ -239,5 +264,8 @@ footer{
     footer{
         min-width: 20rem;
         margin:0;
+    }
+    #credits{
+        margin:1rem;
     } 
 }
