--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -87,10 +87,6 @@
       <a class="project-link" href="/sudoku" target="_blank"><img class="project-img" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/chrome_LOOZCXwiZn.png"></img></a>
       <a href="/sudoku" target="_blank"><button class="project-btn">Sudoku Solver</button></a>
     </div>
-    <div class="project-tile" id="f16">
-      <a class="project-link" href="" target="_blank"><img class="project-img" src=""></img></a>
-      <a href="" target="_blank"><button class="project-btn">Coming Soon!</button></a>
-    </div>
   </div>
   <p class="projtext">Back-end Projects</p>
   <div id="back-end" class="projects-area">
@@ -103,8 +99,8 @@
       <a href="/exercise" target="_blank"><button class="project-btn">Exercise Tracker</button></a>
     </div>
     <div class="project-tile" id="b3">
-      <a class="project-link" href="/index" target="_blank"><img class="project-img" src=""></img></a>
-      <a href="/index" target="_blank"><button class="project-btn">Coming Soon!</button></a>
+      <a class="project-link" href="/keypoints" target="_blank"><img class="project-img" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/keypointsBackground2.png"></img></a>
+      <a href="/keypoints" target="_blank"><button class="project-btn">ML Pose Estimation</button></a>
     </div>
   </div>
   <div id="improvement-list">
