--- a/public/keypoints.css
+++ b/public/keypoints.css
@@ -238,7 +238,7 @@ footer{
     text-align: center;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px), only screen and (max-device-width: 768px) and (orientation: portrait) {
     #container  {
       flex-direction: column;
       justify-content: center;
