--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -5,6 +5,30 @@
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EL5HHJY5RM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-EL5HHJY5RM');
+    </script>
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      
+      ga('create', 'G-EL5HHJY5RM', 'auto');
+      ga(function(tracker) {
+        // Logs the tracker created above to the console.
+        console.log(tracker);
+      });
+      ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
@@ -157,7 +181,7 @@
           <div class="projectBox frontend javascript">
             <a class="projectLink" href="https://codepen.io/Incomple_/full/xxVPNqN" target="_blank"><img class="projectImg" src="https://codepen.io/Incomple_/pen/xxVPNqN/image/large.png"></img></a>
             <h3 class="projectTitle">Random Quote Generator</h3>
-            <p class="projectText">My first website incorporating Javascript. Generates random quote on click with a changing background.</p>
+            <p class="projectText">My first website incorporating Javascript. Generates a random quote and changes background on click.</p>
             <a class="projectButtonLink" href="https://codepen.io/Incomple_/full/xxVPNqN"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
           <div class="projectBox frontend javascript ">
@@ -229,7 +253,7 @@
           <div class="projectBox fullstack javascript mongodb">
             <a class="projectLink" href="/exercise" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/exerciseTrackerBackground.png"></img></a>
             <h3 class="projectTitle">Exercise Tracker</h3>
-            <p class="projectText">a simple CRUD (Create, Read, Update, Delete) web app demo, using MongoDB.</p>
+            <p class="projectText">A simple CRUD (Create, Read, Update, Delete) web app demo, using MongoDB.</p>
             <a class="projectButtonLink" href="/exercise"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
           <div class="projectBox fullstack javascript python">
@@ -258,11 +282,11 @@
         <div id="footerTopContainer">
           <div id="viewCounter" class="footerTopText">Page viewed XX times</div>
           <div id="contactIconsContainer">
-            <a class="iconLink" href="mailto:someone@example.com" target="_blank"><img class="contactIcon" src="assets/gmail.png"></img></a>
+            <a class="iconLink" href="mailto:bryantanzy@gnmail.com" target="_blank"><img class="contactIcon" src="assets/gmail.png"></img></a>
             <a class="iconLink" href="https://t.me/Incomple" target="_blank"><img class="contactIcon" src="assets/telegram.png"></img></a>
             <a class="iconLink" href="https://wa.me/+6591717824" target="_blank"><img class="contactIcon" src="assets/whatsapp.png"></img></a>
             <a class="iconLink" href="https://us04web.zoom.us/j/5631455771?pwd=dkYzM0ZzWCsyZzk0bmV6RndZRjFiZz09" target="_blank"><img class="contactIcon" src="assets/zoom.png"></img></a>
-            <a class="iconLink" href="https://discord.com/channels/@me/132307035181023232/" target="_blank"><img class="contactIcon" src="assets/discord.png"></img></a>
+            <a class="iconLink" href="https://discord.gg/2JGrwbdCx9" target="_blank"><img class="contactIcon" src="assets/discord.png"></img></a>
           </div>
           <a id="backToTopLink" href=#about ><div id="backToTop" class="footerTopText"><img class="upArrowIcon" src="assets/greyUpArrow.png"></img>Back to Top</div></a>
         </div>
@@ -317,6 +341,21 @@
         }
       }
 
+    // Smooth scrolling code below courtesy of https://css-tricks.com/snippets/jquery/smooth-scrolling/
+    const links = document.querySelectorAll("a");
+ 
+    for (const link of links) {
+      link.addEventListener("click", clickHandler);
+    }
+      
+    function clickHandler(e) {
+      e.preventDefault();
+      const href = this.getAttribute("href");
+      
+      document.querySelector(href).scrollIntoView({
+        behavior: "smooth"
+      });
+    }
     </script>
   </body>
 </html>
