--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -264,7 +264,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>                      
 
     <div class="sectionBreak backgroundDiv"></div>
 
@@ -280,7 +280,9 @@
     <footer class="backgroundDiv">
       <div id="footerTop">
         <div id="footerTopContainer">
-          <div id="viewCounter" class="footerTopText">Page viewed XX times</div>
+          <div id="viewCounter" class="footerTopText">Unique Visitors count: <!-- hitwebcounter Code START -->
+            <a href="https://www.hitwebcounter.com" target="_blank">
+            <img id="hitTracker" src="https://hitwebcounter.com/counter/counter.php?page=7716312&style=0007&nbdigits=4&type=ip&initCount=0" title="Total Website Hits" Alt="Web Hits" border="0" /></a></div>
           <div id="contactIconsContainer">
             <a class="iconLink" href="mailto:bryantanzy@gnmail.com" target="_blank"><img class="contactIcon" src="assets/gmail.png"></img></a>
             <a class="iconLink" href="https://t.me/Incomple" target="_blank"><img class="contactIcon" src="assets/telegram.png"></img></a>
